--- a/html/concrete.html
+++ b/html/concrete.html
@@ -99,17 +99,10 @@
     </button>
     <nav class="container">
         <!-- Desktop Navigation -->
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/current-logo.png" alt="valley construction supply logo" height="80px">
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/vcs-black.png" alt="valley construction supply logo" height="80px">
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop"></i>
-                    <ul class="sub-nav sub1">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
-                        <li><a class="about-drop-link" href="about.html">ABOUT VCS</a></li>
-                    </ul>
-                </li>
+                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
                 <li class="services-li"></i><a class="s-link active-menu" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
@@ -122,6 +115,7 @@
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -164,16 +158,16 @@
             <p>Every concrete “project” has both simple as well as challenging assembly requirements. 
                Varying wall heights and thicknesses, slab construction (both with or without) insulation/vapor 
                barrier requirements, grade beams, thickened footings, varying “pier” sizes and depth’s all 
-               require an array of supplies to allow you to maintain your projected timelines. Valley Construction 
-               Supply has either in stock (or quick access to)a wide variety of concrete construction accessories. 
+               require an array of supplies to allow you to complete your project. Valley Construction 
+               Supply has in stock (or quick access to) a wide variety of concrete construction accessories. 
                Form cleats, snap-ties (fixed flat washer, plastic cone etc.), rigid insulation (various “R” value and 
                thicknesses available), under slab vapor barriers, tie wire, duplex nails are just the tip of the iceberg 
                of supplies Valley Construction Supply can provide for your project.    <br><br>
 
-               Valley Construction Supply, also operates its own rebar fabrication facility at our Pacific, WA. facility. 
+               We also operates its own rebar fabrication facility at our Pacific, WA. facility. 
                Starting with accurate tonnage estimates and detailed shop drawings, we can take your project through the 
-               entire “cycle” (estimate/detailing/fabrication per approved bar lists/ bar tagging and jobsite delivery). 
-               20+ years of providing rebar fabrication assistance in the residential, commercial and multi-family arena 
+               entire “cycle” (estimate/detailing/fabrication per approved plans/bar tagging and jobsite delivery). 
+               30+ years of providing rebar fabrication assistance in the residential, commercial and multi-family arena 
                has placed us in a unique position to assist in making your project a success.
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
