--- a/html/inside-sales.html
+++ b/html/inside-sales.html
@@ -16,7 +16,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/inside.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -112,7 +112,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a class="active-menu active-menu-main" href="gallery.html">GALLERY</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
@@ -131,21 +131,72 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
 
-                    <h1>About Valley Construction Supply</h1>
-                    
-                </div>
+                <h1>Inside Sales Position</h1>
+                
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+        </div>
+        <div class="clippy-desktop"></div>
+    </section>
+
+    <section id="job-description" class="container2">
+        <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
+        <p>Want to be part of a team where we value hard work and dedication and have a 
+           culture that rewards you with growth, development and internal promotions?  Do 
+           you work well with others and are able to work in a fast-paced environment?  
+           Do you possess great organization skills, interpersonal skills, are a self-starter 
+           and communicate well both verbally and in writing?
+        </p>
+
+        <h2>POSITION OVERVIEW</h2>
+        <p>We are looking for a talented and competitive Inside Sales Support that thrives in 
+           a quick sales cycle environment. An inside sales rep will play a fundamental role 
+           in achieving our ambitious customer acquisition and revenue growth objectives. You 
+           must be comfortable making dozens of calls per day, working with partners, generating 
+           interest, qualifying prospects and closing sales.</p>
+
+        <h2>RESPONSIBILITIES</h2>
+        <ul>
+            <li>Understand customer needs and requirements.</li>
+            <li>Route qualified opportunities to the appropriate sales executives for further development and closure.</li>
+            <li>Maintain and expand your database of prospects within your assigned territory.</li>
+            <li>Working closely with the Inside Sales Staff to provide support by relieving them of 
+                administrative work.   Duties may include order processing/entry, making price quotations, 
+                record keeping, RFP response, product training, or other related tasks. </li>
+            <li>Working closely with the purchasing manager to ensure all info is correct before purchasing/creating the sales order’s.</li>
+        </ul>
+
+        <h2>REQUIREMENTS</h2>
+        <ul>
+            <li>High School Diploma or General Education Degree (GED).</li>
+            <li>Have a valid driver's license.</li>
+            <li>Six months experience and/or training in customer service.</li>
+            <li>Strong listening and presentation skills.</li>
+            <li>Ability to multi-task, prioritize, and manage time effectively.</li>
+            <li>Excellent verbal and written communications skills.</li>
+            <li>Computer skills. (Familiar with Word/Excel)</li>
+        </ul>
+
+        <h2>BENEFITS</h2>
+        <P>We offer a competitive benefit package including a 401K plan, medical, dental, life and disability insurance. We are an Equal 
+           Opportunity Employer. Candidates are subject reference checks, criminal background and DMV checks, assessments, and a pre-employment 
+           drug screening. EOE/M/F/Vets/Disability.
+        </P>
+
+        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+            DOWNLOAD APPLICATION
+        </button>
+
+    </section>
+
 </main>
 
 <footer>
