--- a/html/materials.html
+++ b/html/materials.html
@@ -99,17 +99,10 @@
     </button>
     <nav class="container">
         <!-- Desktop Navigation -->
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/current-logo.png" alt="valley construction supply logo" height="80px">
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/vcs-black.png" alt="valley construction supply logo" height="80px">
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop"></i>
-                    <ul class="sub-nav sub1">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
-                        <li><a class="about-drop-link" href="about.html">ABOUT VCS</a></li>
-                    </ul>
-                </li>
+                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
                 <li class="services-li"></i><a class="s-link active-menu" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
@@ -122,6 +115,7 @@
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
