--- a/html/promotions.html
+++ b/html/promotions.html
@@ -99,17 +99,10 @@
     </button>
     <nav class="container">
         <!-- Desktop Navigation -->
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/current-logo.png" alt="valley construction supply logo" height="80px">
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/vcs-black.png" alt="valley construction supply logo" height="80px">
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop"></i>
-                    <ul class="sub-nav sub1">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
-                        <li><a class="about-drop-link" href="about.html">ABOUT VCS</a></li>
-                    </ul>
-                </li>
+                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
                 <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
@@ -118,10 +111,11 @@
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
                     </ul>
                 </li>
-                <li><a class="active-menu" href="promotions.html">PROMOTIONS</a></li>
+                <li><a class="active-menu active-menu-main" href="promotions.html">PROMOTIONS</a></li>
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -263,11 +257,12 @@
                 <img class="group" src="/images/group.png" alt="logo for valley constructions supply weyerhaeuser and simpson strong tie" height="400px" width="300px">
             </div>
             <div class="experience-content">
-                <h4>Open New List Account For 15% Off Your Furst 3 Billing Cycles</h4>
+                <h4>Open a new list account & receive and additional 15% off your first 3 billing cycles</h4>
                 <h3>Unlock the benefits! Open you new account today!</h3>
-                <P>Open a new list account and receive an additional 15% discount for the first 3 billing cycles 
-                   Our normal terms on a list account usually has a 10% disocunt when your bill is paid 
-                   by the 10th.
+                <P>Unlock the benefits! Open your new account today
+                    our normal terms on a list account is 10% discount when paid in full by the 10th
+                    of each month. With this new promotional account your terms will be 25%
+                    discount if paid in full by the 10th of the following month for your first 3 billing cycles.
                 </P>
                 <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
                 <button class="solid gallery-button"  type="button" onclick="location.href='contact.html'">
