--- a/index.html
+++ b/index.html
@@ -109,13 +109,8 @@
             <img aria-hidden="true" class="valley-mobile-logo" src="images/vcs-black.png" alt="valley construction supply logo" height="80px">
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
-                    <li><a class="active-menu" href="index.html">HOME</a></li>
-                    <li class="about-li"><a class="a-link" href="html/about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop"></i>
-                        <ul class="sub-nav sub1">
-                            <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
-                            <li><a class="about-drop-link" href="html/about.html">ABOUT VCS</a></li>
-                        </ul>
-                    </li>
+                    <li><a class="active-menu active-menu-main" href="index.html">HOME</a></li>
+                    <li class="about-li"><a class="a-link" href="html/about.html">ABOUT</a></li>
                     <li class="services-li"></i><a class="s-link" href="html/services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                         <ul class="sub-nav sub2">
                             <li><a id="contact-width-change" class="service-drop-link"href="html/services.html">OUR SERVICES</a></li>
@@ -128,6 +123,7 @@
                     <li><a href="html/gallery.html">GALLERY</a></li>
                     <li class="contact-li"><a class="c-link" href="html/contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                         <ul class="sub-nav sub3">
+                            <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
                             <li><a id="contact-width-change" class="contact-drop-link"href="html/contact.html">CONTACT VCS</a></li>
                             <li><a id="contact-width-change" class="contact-drop-link" href="html/apply.html">APPLY FOR CREDIT</a></li>
                         </ul>
@@ -153,8 +149,8 @@
             <div class="landing-text">
                 <h1>Your Puget Sound Construction Supply Specialist</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
-                    supplier of wholesale concrete, framing, rebar, draining and venting 
-                    supply for Seattle and the surrounding Puget Sound area.
+                    supplier of wholesale concrete, framing, rebar, drainage and miscellaneous construction materials 
+                     for Seattle and the surrounding Puget Sound area.
                 </h2>
                 <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
                     ABOUT VCS
