--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -99,21 +99,14 @@
     </button>
     <nav class="container">
         <!-- Desktop Navigation -->
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/current-logo.png" alt="valley construction supply logo" height="80px">
-        <img aria-hidden="true" class="valley-mobile-logo" src="images/vcs-black.png" alt="valley construction supply logo" height="80px">
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop"></i>
-                    <ul class="sub-nav sub1">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
-                        <li><a class="about-drop-link" href="about.html">ABOUT VCS</a></li>
-                    </ul>
-                </li>
-                <li class="services-li"></i><a class="s-link active-menu" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
+                <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
-                        <li><a id="contact-width-change" class="service-drop-link active-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
                     </ul>
@@ -122,6 +115,7 @@
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -168,11 +162,10 @@
 
                Our strong relationship with Weyerhaeuser provides us high quality rebar steel at 
                a great price.  No other construction supply company in Seattle can take that rebar 
-               and turn it into strutures for new single family home or a residential remodels, 
-               commercial sites, mixed use multi-family facilities, storm water retention vaults. 
-               retaining walls, and many more.  For whatever rebar fabrication need you have, Valley 
-               has you covered.  Give us a call and talk to an experienced sales rep to elarn more about
-               what we can do for you to make your project go smoothly.
+               and turn it into structures for new single family home, 
+               commercial sites, mixed use/multi-family projects, storm water retention vaults, 
+               and retaining walls.  Whatever rebar fabrication needs you have, Valley 
+               has you covered.  Give us a call and talk to an experienced sales rep to learn more about what we can do for you to make your project go smoothly
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VALLEY
