--- a/html/warehouse-driver.html
+++ b/html/warehouse-driver.html
@@ -16,7 +16,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/inside.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -112,7 +112,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a class="active-menu active-menu-main" href="gallery.html">GALLERY</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
@@ -131,21 +131,84 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
 
-                    <h1>About Valley Construction Supply</h1>
-                    
-                </div>
+                <h1>Warehouse/Delivery Driver</h1>
+                
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+        </div>
+        <div class="clippy-desktop"></div>
+    </section>
+
+    <section id="job-description" class="container container2">
+        <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
+        <p>Want to be part of a team where we value hard work and dedication and have a 
+           culture that rewards you with growth, development and internal promotions?  Do 
+           you work well with others and are able to work in a fast-paced environment?  
+           Do you possess great organization skills, interpersonal skills, are a self-starter 
+           and communicate well both verbally and in writing?<br><br>
+
+           We are a construction supply company located in Marysville, WA. We are looking for 
+           a warehouse person/delivery driver. We buy local materials, store them in our facility 
+           and package them for delivery to multiple locations.
+        </p>
+
+        <h2>POSITION OVERVIEW</h2>
+        <p>Responsible for operation of delivery truck to deliver and pick up materials locally. 
+           In charge of loading, unloading and placing inventory into warehouse, picking and packing 
+           orders for delivery, timely and accurate delivery and/or pickup of goods to specified 
+           locations. Responsible for maintaining inventory control in warehouse. </p>
+
+        <h2>RESPONSIBILITIES</h2>
+        <ul>
+            <li>Operation of delivery truck to deliver and pickup materials making prompt on schedule  
+                deliveries and pickups while notifying management of any delays in the delivery schedule.</li>
+            <li>Maintain vehicle properly and furnish vehicle operation report.</li>
+            <li>Report and record damage to vehicles, product and/or equipment.</li>
+            <li>Load and unload trucks and trailers by hand or by use of a hand truck, forklift or dolly.</li>
+            <li>Pick and properly fill counter requests, will call, branch transfers and truck shipments.</li>
+            <li>Stock and secure items in position on truck to prevent damage during shipments.</li>
+            <li>Prepare bills of lading for shipment. </li>
+            <li>Responsible for assisting and assembling product for receiving, storing, shipping and control 
+                of materials in inventory or being sold. </li>
+            <li>Prepare return tickets and record damage of faulty materials.</li>
+            <li>Report out of stock items to warehouse manager. </li>
+            <li>Maintain the warehouse to ensure its cleanliness, organized and safe for all employees.</li>
+        </ul>
+
+        <h2>REQUIREMENTS</h2>
+        <ul>
+            <li>High School Diploma or General Education Degree (GED).</li>
+            <li>Have a valid driver's license.</li>
+            <li>Six months experience and/or training in this field of work to include warehouse and 
+                or/maintenance experience, fork lift operation experience. </li>
+            <li>Meet our company's requirements in regard to handling of any and all company vehicles. </li>
+            <li>Work both indoors and outside under all weather conditions. </li>
+            <li>Able to lift up to 100 lbs. repeatedly as you will be working with materials on pallets. </li>
+            <li>Able to stand on feet most of the day. </li>
+            <li>-Required to meet Federal Motor Carrier Safety Regulations</li>
+            <li>Maintain an organized warehouse. </li>
+        </ul>
+
+        <h2>BENEFITS</h2>
+        <P>We offer a competitive benefit package including a 401K plan, medical, dental, life and disability insurance. We are an Equal 
+           Opportunity Employer. Candidates are subject reference checks, criminal background and DMV checks, assessments, and a pre-employment 
+           drug screening. EOE/M/F/Vets/Disability.
+        </P>
+
+        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+            DOWNLOAD APPLICATION
+        </button>
+
+    </section>
+
 </main>
 
 <footer>
