added one more job page

--- a/html/inside-sales.html
+++ b/html/inside-sales.html
@@ -147,7 +147,7 @@
         <div class="clippy-desktop"></div>
     </section>
 
-    <section id="job-description" class="container2">
+    <section id="job-description" class="container container2">
         <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
         <p>Want to be part of a team where we value hard work and dedication and have a 
            culture that rewards you with growth, development and internal promotions?  Do 
