--- a/html/outside-sales.html
+++ b/html/outside-sales.html
@@ -157,11 +157,9 @@
         </p>
 
         <h2>POSITION OVERVIEW</h2>
-        <p>We are looking for a talented and competitive Inside Sales Support that thrives in 
-           a quick sales cycle environment. An inside sales rep will play a fundamental role 
-           in achieving our ambitious customer acquisition and revenue growth objectives. You 
-           must be comfortable making dozens of calls per day, working with partners, generating 
-           interest, qualifying prospects and closing sales.</p>
+        <p>Valley construction supply in Maryville is seeking an experienced, self-motivated outside sales person
+                focusing on acquisition of new customer accounts, as well as helping maintain the relationships
+                we have with existing customers. Salary DOE. E-mail responses only, please no phone calls.</p>
 
         <h2>RESPONSIBILITIES</h2>
         <ul>
@@ -176,13 +174,15 @@
 
         <h2>REQUIREMENTS</h2>
         <ul>
-            <li>High School Diploma or General Education Degree (GED).</li>
-            <li>Have a valid driver's license.</li>
-            <li>Six months experience and/or training in customer service.</li>
-            <li>Strong listening and presentation skills.</li>
-            <li>Ability to multi-task, prioritize, and manage time effectively.</li>
-            <li>Excellent verbal and written communications skills.</li>
-            <li>Computer skills. (Familiar with Word/Excel)</li>
+            <li>No fear of tracking down your own leads and customers</li>
+            <li>Ability to maintain relationships with a network of customers, contractors, and suppliers.</li>
+            <li>A service oriented strong work ethic</li>
+            <li>Ability to multi task and maintain control of multiple projects at the same time.</li>
+            <li>Strong communication, and time management skills.</li>
+            <li>2 year’s experience in construction</li>
+            <li>Clean driving record</li>
+            <li>Basic computer skills</li>
+            <li>Must be able to pass a drug screening</li>
         </ul>
 
         <h2>BENEFITS</h2>
