--- a/html/warehouse.html
+++ b/html/warehouse.html
@@ -140,7 +140,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>Warehouse</h1>
+                <h1>Warehouse Person</h1>
                 
             </div>
         </div>
@@ -153,36 +153,43 @@
            culture that rewards you with growth, development and internal promotions?  Do 
            you work well with others and are able to work in a fast-paced environment?  
            Do you possess great organization skills, interpersonal skills, are a self-starter 
-           and communicate well both verbally and in writing?
+           and communicate well both verbally and in writing?<br><br>
+
+           We are a construction supply company located in Marysville, WA that purchases local materials, storing
+           them in our facility and packaging them for delivery to multiple locations.
+           We are looking for a warehouse person that will be responsible for maintaining inventory control
+           in our warehouse.
         </p>
 
         <h2>POSITION OVERVIEW</h2>
-        <p>We are looking for a talented and competitive Inside Sales Support that thrives in 
-           a quick sales cycle environment. An inside sales rep will play a fundamental role 
-           in achieving our ambitious customer acquisition and revenue growth objectives. You 
-           must be comfortable making dozens of calls per day, working with partners, generating 
-           interest, qualifying prospects and closing sales.</p>
+        <p>In charge of loading, unloading and placing inventory into warehouse, picking and packing orders for
+                delivery, timely and accurate delivery and/or pickup of goods to specified locations.
+                Responsible for maintaining inventory control in warehouse.</p>
 
         <h2>RESPONSIBILITIES</h2>
         <ul>
-            <li>Understand customer needs and requirements.</li>
-            <li>Route qualified opportunities to the appropriate sales executives for further development and closure.</li>
-            <li>Maintain and expand your database of prospects within your assigned territory.</li>
-            <li>Working closely with the Inside Sales Staff to provide support by relieving them of 
-                administrative work.   Duties may include order processing/entry, making price quotations, 
-                record keeping, RFP response, product training, or other related tasks. </li>
-            <li>Working closely with the purchasing manager to ensure all info is correct before purchasing/creating the sales order’s.</li>
+            <li>Load and unload trucks and trailers by hand or by use of a hand truck, forklift or dolly. </li>
+            <li>Pick and properly fill counter requests, will call, branch transfers and truck shipments.</li>
+            <li>Stock and secure items in position on truck to prevent damage during shipments. </li>
+            <li>Prepare bills of lading for shipment. </li>
+            <li>Responsible for assisting and assembling product for receiving, storing, shipping and control of  materials in inventory or being sold. </li>
+            <li>Prepare return tickets and record damage of faulty materials </li>
+            <li>Report out of stock items to warehouse manager. </li>
+            <li>Maintain the warehouse to ensure its cleanliness, organized and safe for all employees.</li>
         </ul>
 
         <h2>REQUIREMENTS</h2>
         <ul>
-            <li>High School Diploma or General Education Degree (GED).</li>
-            <li>Have a valid driver's license.</li>
-            <li>Six months experience and/or training in customer service.</li>
-            <li>Strong listening and presentation skills.</li>
-            <li>Ability to multi-task, prioritize, and manage time effectively.</li>
-            <li>Excellent verbal and written communications skills.</li>
-            <li>Computer skills. (Familiar with Word/Excel)</li>
+            <li>High School Diploma or General Education Degree (GED). </li>
+            <li>Six months experience and/or training in this field of work to include warehouse and or/maintenance experience, fork lift operation experience.</li>
+            <li>Have a valid driver's license</li>
+            <li>Meet our company's requirements in regard to handling of any and all company vehicles.</li>
+            <li>Work both indoors and outside under all weather conditions. </li>
+            <li>Able to lift up to 100 lbs. repeatedly as you will be working with materials on pallets.</li>
+            <li>Able to stand on feet most of the day.</li>
+            <li>Required to meet Federal Motor Carrier Safety Regulations </li>
+            <li>Maintain an organized warehouse. </li>
+            <li>Possesses a current medical certification card or ability to obtain one.</li>
         </ul>
 
         <h2>BENEFITS</h2>
