changed nav li padding to even them out

--- a/html/materials.html
+++ b/html/materials.html
@@ -156,7 +156,88 @@
             <ul>
                 <li>EXCAVATION
                     <ul>
-                        <li></li>
+                        <li>Filter Fence</li>
+                        <li>Geo Textiles</li>
+                        <li>Culvert</li>
+                        <li>Flagging Tape</li>
+                        <li>Catch Basins</li>
+                        <li>Straw</li>
+                        <li>Filter Fabric</li>
+                    </ul>
+                </li>
+                <li>FOUNDATION
+                    <ul>
+                        <li>Rebar, Cut & Bent Rebar</li>
+                        <li>ICF Panels</li>
+                        <li>Custom/Anchor Bolts</li>
+                        <li>Lateral Restraint Straps</li>
+                        <li>Foundation Vents</li>
+                        <li>Sono Tube</li>
+                        <li>Pier Molds</li>
+                        <li>Access Wells</li>
+                    </ul>
+                </li>
+                <li>CONCRETE ACCESSORIES
+                    <ul>
+                        <li>Cleats/Snap Ties</li>
+                        <li>Tie Wire</li>
+                        <li>Duplex Nails</li>
+                        <li>Form Oil</li>
+                        <li>Wood & Metal Stakes</li>
+                        <li>Snaptie Shoes</li>
+                        <li>Footing Straps</li>
+                        <li>Asphault Emulsion</li>
+                    </ul>
+                </li>
+                <li>FLAT WORK
+                    <ul>
+                        <li>Wire Mesh</li>
+                        <li>Expansion Joint</li>
+                        <li>Metal Key Way</li>
+                        <li>Rigid Insulation</li>
+                        <li>Zip Strap</li>
+                        <li>Vapor Barrier</li>
+                        <li>Concrete Sealer</li>
+                    </ul>
+                </li>
+                <li>DRAINAGE
+                    <ul>
+                        <li>Drain Pipe</li>
+                        <li>PVC Fittings</li>
+                        <li>Sewer Pipe</li>
+                        <li>Donduit</li>
+                        <li>Waterline</li>
+                        <li>Channel Drain</li>
+                        <li>Yard Drains</li>
+                    </ul>
+                </li>
+                <li>FRAMING
+                    <ul>
+                        <li>Simpson Strong Tie</li>
+                        <li>Hand Drive Nails</li>
+                        <li>Pneumatic Nails & Staples</li>
+                        <li>Machine Bolts</li>
+                        <li>All Thread</li>
+                        <li>Screws</li>
+                        <li>Collated Screws</li>
+                        <li>Pipe Columns</li>
+                        <li>Poly Film</li>
+                        <li>Subfloor Glue</li>
+                        <li>Nervoustral/Sill Sealer</li>
+                        <li>Fabricated Hangers</li>
+                        <li>Pocket Door Frames</li>
+                    </ul>
+                </li>
+                <li>SIDING
+                    <ul>
+                        <li>House Wraps</li>
+                        <li>Window & Door Flashings</li>
+                        <li>Caulkings</li>
+                        <li>Wood Gable Vents</li>
+                        <li>Plastic, Metal, Gable Vents</li>
+                        <li>Rim Vents</li>
+                        <li>Soffit Screens</li>
+                        <li>Continous Soffit Screen</li>
                     </ul>
                 </li>
             </ul>
